<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".robotnicRegLogActivity">

    <EditText
        android:id="@+id/robotnicEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusRobotnic"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textNoSuggestions"
        />

    <EditText
        android:id="@+id/robotnicPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/robotnicEmail"
        android:hint="@string/pass"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInRobotnic"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/robotnicPassword"
        android:background="@android:color/holo_green_light"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/signIn" />

    <Button
        android:id="@+id/signUpRobotnic"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/signInRobotnic"
        android:background="@android:color/holo_red_light"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/statusRobotnic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/robotnicStatus" />

    <TextView
        android:id="@+id/accountCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signInRobotnic"
        android:layout_marginTop="5dp"
        android:text="@string/createQuestion" />

</RelativeLayout>